fix: :bug: Adjust gap in section header actions for responsive design

--- a/src/shared/ui/layout/section-header/section-header.scss
+++ b/src/shared/ui/layout/section-header/section-header.scss
@@ -32,7 +32,11 @@
     display: flex;
     align-items: center;
 
-    gap: 16px;
+    gap: 8px;
+
+    @include mixins.responsive('sm') {
+      gap: 16px;
+    }
   }
 
   &__divider {
